@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-20T01:22:35Z",
+  "timestamp" : "2022-11-20T08:18:08Z",
   "count_outdated" : 670,
   "uniques_outdated" : 380,
-  "count" : 693,
-  "uniques" : 392,
+  "count" : 699,
+  "uniques" : 395,
   "clones" : [
     {
       "timestamp": "2022-11-12T00:00:00Z",
@@ -60,6 +60,13 @@
       "count_minmax": [ 3, 5 ],
       "uniques": 4,
       "uniques_minmax": [ 3, 4 ]
+    },
+    {
+      "timestamp": "2022-11-20T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 6, 6 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ]
     }
   ]
 }
