@@ -1,6 +1,6 @@
 {
-  "count": 23,
-  "uniques": 6,
+  "count": 29,
+  "uniques": 8,
   "clones": [
     {
       "timestamp": "2022-11-12T00:00:00Z",
@@ -41,6 +41,11 @@
       "timestamp": "2022-11-19T00:00:00Z",
       "count": 5,
       "uniques": 4
+    },
+    {
+      "timestamp": "2022-11-20T00:00:00Z",
+      "count": 6,
+      "uniques": 3
     }
   ]
 }
