@@ -1,3 +1,11 @@
+2022-11-20T08:18:08Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3507137302 # 1045
+* notice: last 14d: unq all: 8 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 380 670 / 392 693
+* notice: next accum: outdated-unq outdated-all / unq all: 380 670 / 395 699
+* notice: prev exec diff / last date diff / accum: unq all: +3 +6 -0 -0 / +3 +6 -0 -0 / 3 6
+* notice: removed / changed dates: [] / [2022-11-20]
+
 2022-11-20T01:22:35Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3505934074 # 1044
 * notice: last 14d: unq all: 6 23
